--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.2.50'
+    ext.versions = [
+            'koin': '0.9.3'
+    ]
     repositories {
         google()
         jcenter()
