--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,15 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'com.android.support:support-v4:28.0.0-alpha3'
+
+    //lifecycle and Livedata
+    implementation "android.arch.lifecycle:extensions:$versions.lifecycle"
+    implementation "android.arch.lifecycle:common-java8:$versions.lifecycle"
+
+    //room
+    implementation "android.arch.persistence.room:runtime:$versions.room"
+    kapt "android.arch.persistence.room:compiler:$versions.room"
 
     //koin
     implementation "org.koin:koin-android:$versions.koin"
@@ -40,8 +49,10 @@ dependencies {
     //goggle play services auth
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
-    implementation 'com.android.support:support-v4:28.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.core:core-testing:$versions.lifecycle"
+    testImplementation "android.arch.persistence.room:testing:$versions.room"
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
