--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.2.50'
     ext.versions = [
-            'koin': '0.9.3'
+            'koin': '0.9.3',
+            'lifecycle':'1.1.1',
+            'room':'1.1.1'
     ]
     repositories {
         google()
