--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
         }
     }
 
+    sourceSets {
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -65,7 +70,10 @@ dependencies {
     //goggle play services auth
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
-    testImplementation 'junit:junit:4.12'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.2.50'
+    testCompile "com.nhaarman:mockito-kotlin:1.6.0"
+    testCompile 'org.amshove.kluent:kluent:1.15'
+
     testImplementation "android.arch.core:core-testing:$versions.lifecycle"
     testImplementation "android.arch.persistence.room:testing:$versions.room"
     testImplementation "android.arch.paging:common:$versions.paging"
