--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
             'koin'     : '0.9.3',
             'lifecycle': '1.1.1',
             'room'     : '1.1.1',
-            'paging'   : '1.0.0'
+            'paging'   : '1.0.0',
+            'stetho'   : '1.5.0'
     ]
     repositories {
         google()
