--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,14 +85,15 @@ dependencies {
     //stetho
     implementation "com.facebook.stetho:stetho:$versions.stetho"
 
-    testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.2.50'
-    testCompile "com.nhaarman:mockito-kotlin:1.6.0"
-    testCompile 'org.amshove.kluent:kluent:1.15'
-
+    testImplementation "org.mockito:mockito-android:$versions.mockito"
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.2.50'
+    testImplementation "com.nhaarman:mockito-kotlin:1.6.0"
+    testImplementation 'org.amshove.kluent:kluent:1.15'
     testImplementation "android.arch.core:core-testing:$versions.lifecycle"
     testImplementation "android.arch.persistence.room:testing:$versions.room"
     testImplementation "android.arch.paging:common:$versions.paging"
 
+    androidTestImplementation "org.mockito:mockito-android:$versions.mockito"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation "org.koin:koin-test:$versions.koin"
