--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
             'lifecycle': '1.1.1',
             'room'     : '1.1.1',
             'paging'   : '1.0.1',
-            'stetho'   : '1.5.0'
+            'stetho'   : '1.5.0',
+            'mockito'  : '2.19.0'
     ]
     repositories {
         google()
