--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
             java.srcDirs += 'src/androidTest/kotlin'
             java.srcDirs += SHARED_TEST_DIR
         }
+        debug { java.srcDirs = ['src/debug/java', 'src/debug/java/'] }
     }
 
     compileOptions {
@@ -92,6 +93,7 @@ dependencies {
     testImplementation "android.arch.core:core-testing:$versions.lifecycle"
     testImplementation "android.arch.persistence.room:testing:$versions.room"
     testImplementation "android.arch.paging:common:$versions.paging"
+    testImplementation "org.koin:koin-test:$versions.koin"
 
     androidTestImplementation "org.mockito:mockito-android:$versions.mockito"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
