fix : move OpenForTesting annotations to main so that cmd test command will succeed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,10 @@ android {
             java.srcDirs += 'src/androidTest/kotlin'
             java.srcDirs += SHARED_TEST_DIR
         }
-        debug { java.srcDirs = ['src/debug/java', 'src/debug/java/'] }
+    }
+
+    lintOptions {
+        lintConfig rootProject.file('lint.xml')
     }
 
     compileOptions {
