test : add env for missing google_service.json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,16 @@ references:
       name: Download Android Dependencies
       command: ./gradlew androidDependencies
 
+  # Google Services
+  export_gservices_key: &export_gservices_key
+    run:
+      name: Export Google Services key environment variable
+      command: echo 'export GOOGLE_SERVICES_KEY="$GOOGLE_SERVICES_KEY"' >> $BASH_ENV
+  decode_gservices_key: &decode_gservices_key
+    run:
+      name: Decode Google Services key
+      command: echo $GOOGLE_SERVICES_KEY | base64 -di > app/google-services.json
+
   #Google Cloud Service
   export_gcloud_key: &export_gcloud_key
     run:
