--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
+        classpath('com.dicedmelon.gradle:jacoco-android:0.1.2') {
+            exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+        }
     }
 }
 
