--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,10 @@ dependencies {
     testImplementation "android.arch.paging:common:$versions.paging"
     testImplementation "org.koin:koin-test:$versions.koin"
 
+    androidTestImplementation "android.arch.core:core-testing:$versions.lifecycle"
     androidTestImplementation "org.mockito:mockito-android:$versions.mockito"
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation "com.android.support.test:runner:$versions.test"
+    androidTestImplementation "com.android.support.test:rules:$versions.test"
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation "org.koin:koin-test:$versions.koin"
 }
