--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
             'room'     : '1.1.1',
             'paging'   : '1.0.1',
             'stetho'   : '1.5.0',
-            'mockito'  : '2.19.0'
+            'mockito'  : '2.19.0',
+            'test'     : '1.0.2'
     ]
     repositories {
         google()
