--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'org.jacoco:org.jacoco.core:0.8.1'
     }
 }
 
