--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,10 +118,10 @@ dependencies {
     //stetho
     implementation "com.facebook.stetho:stetho:$versions.stetho"
 
-    testImplementation "org.mockito:mockito-android:$versions.mockito"
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.2.50'
-    testImplementation "com.nhaarman:mockito-kotlin:1.6.0"
-    testImplementation 'org.amshove.kluent:kluent:1.15'
+    testImplementation "org.mockito:mockito-core:$versions.mockito"
+    testImplementation "com.nhaarman:mockito-kotlin:$versions.mockito_kotlin"
+    testImplementation "org.amshove.kluent:kluent:$versions.kluent"
     testImplementation "android.arch.core:core-testing:$versions.lifecycle"
     testImplementation "android.arch.persistence.room:testing:$versions.room"
     testImplementation "android.arch.paging:common:$versions.paging"
