--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,15 @@
 buildscript {
     ext.kotlin_version = '1.2.50'
     ext.versions = [
-            'koin'     : '0.9.3',
-            'lifecycle': '1.1.1',
-            'room'     : '1.1.1',
-            'paging'   : '1.0.1',
-            'stetho'   : '1.5.0',
-            'mockito'  : '2.19.0',
-            'test'     : '1.0.2'
+            'koin'          : '0.9.3',
+            'lifecycle'     : '1.1.1',
+            'room'          : '1.1.1',
+            'paging'        : '1.0.1',
+            'stetho'        : '1.5.0',
+            'mockito'       : '2.19.0',
+            'mockito_kotlin': '1.6.0',
+            'test'          : '1.0.2',
+            'kluent'        : '1.15'
     ]
     repositories {
         google()
